--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,5 @@ spring:
       maximumPoolSize: 150
     driverClassName: org.postgresql.Driver
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/app}
-    username: ${SPRING_DATASOURCE_USERNAME:admin}
-    password: ${SPRING_DATASOURCE_PASSWORD:123456}
+    username: ${SPRING_DATASOURCE_USERNAME:jeanfernandes}
+    password: ${SPRING_DATASOURCE_PASSWORD:1234}
