--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,60 @@
 version: '3.5'
 
 services:
-  db:
+  api1: &api
+    build:
+      context: .
+      dockerfile: Dockerfile
+    hostname: api1
+    depends_on:
+      - postgres
+    expose:
+      - "8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/app
+      - SPRING_DATASOURCE_USERNAME=jeanfernandes
+      - SPRING_DATASOURCE_PASSWORD=1234
+    networks:
+      - rinha
+    deploy:
+      resources:
+        limits:
+          cpus: '0.45'
+          memory: '0.7GB'
+
+  api2:
+    <<: *api
+    hostname: api2
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api1
+      - api2
+    ports:
+      - "9999:9999"
+    networks:
+      - rinha
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: '0.2GB'
+
+  postgres:
     image: postgres:latest
     command: 'postgres -c shared_buffers=640MB -c max_connections=330 -c effective_cache_size=1GB -c maintenance_work_mem=384MB'
-    hostname: db
+    hostname: postgres
     environment:
       - POSTGRES_DB=app
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=123456
+      - POSTGRES_USER=jeanfernandes
+      - POSTGRES_PASSWORD=1234
     ports:
       - "5432:5432"
+    volumes:
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     networks:
       - rinha
     deploy:
