--- a/dbconfig/pg.config
+++ b/dbconfig/pg.config
@@ -1,65 +1,8 @@
 listen_addresses = '*'
-max_connections = 250
-superuser_reserved_connections = 3
-unix_socket_directories = '/var/run/postgresql'
-shared_buffers = 512MB
-work_mem = 4MB
-maintenance_work_mem = 256MB
-effective_cache_size = 1GB
-wal_buffers = 64MB
-checkpoint_completion_target = 0.9
-random_page_cost = 4.0
-effective_io_concurrency = 10
-autovacuum = on
-log_statement = 'none'
-log_duration = off
-log_lock_waits = off
-log_error_verbosity = terse
-log_min_messages = panic
-log_min_error_statement = panic
+checkpoint_timeout=1d
+full_page_writes=false
+wal_level=minimal
+max_wal_senders=0
+max_connections=16
+fsync=off
 synchronous_commit=off
-## -----------------------------
-## PostgreSQL configuration file
-## -----------------------------
-#
-#listen_addresses = '*'
-#
-## RESOURCE USAGE
-#max_connections = 30
-#
-## QUERY TUNING
-#random_page_cost = 1.1
-#effective_io_concurrency = 30
-#
-#synchronous_commit=off
-#
-#log_statement = 'none'
-#log_duration = off
-#log_lock_waits = off
-#
-#work_mem = 4MB
-#maintenance_work_mem = 256MB
-#effective_cache_size = 1GB
-#wal_buffers = 64MB
-#
-##shared_buffers=640MB -c max_connections=330 -c effective_cache_size=1GB -c maintenance_work_mem=384MB
-##listen_addresses = '*'
-##max_connections = 250
-##superuser_reserved_connections = 3
-##unix_socket_directories = '/var/run/postgresql'
-##shared_buffers = 512MB
-##work_mem = 4MB
-##maintenance_work_mem = 256MB
-##effective_cache_size = 1GB
-##wal_buffers = 64MB
-##checkpoint_completion_target = 0.9
-##random_page_cost = 4.0
-##effective_io_concurrency = 10
-##autovacuum = on
-##log_statement = 'none'
-##log_duration = off
-##log_lock_waits = off
-##log_error_verbosity = terse
-##log_min_messages = panic
-##log_min_error_statement = panic
-##synchronous_commit=off
