--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   api1: &api
-    #image: jeanlucafp/rinhabackend2024java:latest
+    #image: jeanlucafp/rinhabackend2024java:5
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,16 +12,14 @@ services:
     expose:
       - "8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/app
-      - SPRING_DATASOURCE_USERNAME=jeanfernandes
-      - SPRING_DATASOURCE_PASSWORD=1234
+      - SPRING_DATASOURCE_URL=r2dbc:postgresql://jeanfernandes:1234@postgres:5432/app
     networks:
       - rinha
     deploy:
       resources:
         limits:
           cpus: "0.6"
-          memory: "200MB"
+          memory: "130MB"
 
   api2:
     <<: *api
@@ -41,12 +39,13 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.17"
-          memory: "10MB"
+          cpus: "0.2"
+          memory: "30MB"
 
   postgres:
     image: postgres:latest
-    command: 'postgres -c config_file=/etc/postgresql/pg.config'
+    #command: 'postgres -c config_file=/etc/postgresql/pg.config'
+    command: postgres -c checkpoint_timeout=600 -c max_wal_size=2096 -c synchronous_commit=0 -c full_page_writes=0 -c fsync=off -c check_function_bodies=false
     hostname: postgres
     environment:
       - POSTGRES_DB=app
@@ -56,14 +55,13 @@ services:
       - "5432:5432"
     volumes:
       - ./dbconfig/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-      - ./dbconfig/pg.config:/etc/postgresql/pg.config
     networks:
       - rinha
     deploy:
       resources:
         limits:
-          cpus: "0.13"
-          memory: "140MB"
+          cpus: "0.10"
+          memory: "260MB"
 
 networks:
   rinha:
