--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,12 @@ events {
 
 http {
     access_log off;
-    sendfile   on;
 
     upstream api {
         server api1:8080;
         server api2:8080;
-        keepalive 500;
+        keepalive 320;
+        keepalive_requests 6000;
     }
 
     server {
@@ -17,6 +17,11 @@ http {
 
         location / {
             proxy_pass http://api;
+            proxy_http_version 1.1;
+            proxy_buffering off;
+            proxy_set_header Connection "";
+            proxy_set_header Keep-Alive "";
+            proxy_set_header Proxy-Connection "keep-alive";
         }
     }
 }
