Isolation.READ_COMMITTED

--- a/DockerfileGrallVM
+++ b/DockerfileGrallVM
@@ -24,4 +24,4 @@ RUN chmod 775 /work
 
 EXPOSE 8080
 
-CMD ["./backend", "-Xmx170M", "-Xms50M", "-Xss156k"]
+CMD ["./rinha", "-Xmx170M", "-Xms50M", "-Xss156k"]
