--- a/java-native-web-flux/nginx.conf
+++ b/java-native-web-flux/nginx.conf
@@ -1,20 +1,22 @@
 events {
-    worker_connections 1000;
+    use epoll;
+    worker_connections 6000;
 }
 
 http {
     access_log off;
+    error_log /dev/null crit;
 
-    upstream api {
+	upstream api {
+        least_conn;
         server api1:8080;
-        server api2:8080;
+        server api2:8081;
         keepalive 320;
         keepalive_requests 6000;
     }
 
     server {
         listen 9999;
-
         location / {
             proxy_pass http://api;
             proxy_http_version 1.1;
